Fix dropdown search text overflow issue

--- a/client/styles/base/_variables.scss
+++ b/client/styles/base/_variables.scss
@@ -66,6 +66,10 @@ $dropdown-search-width-lg: 500px;
 $dropdown-search-width-md: 500px;
 $dropdown-search-width: 400px;
 
+$dropdown-search-title-width-4k: 320px;
+$dropdown-search-title-width-lg: 420px;
+$dropdown-search-title-width-md: 420px;
+$dropdown-search-title-width: 320px;
 
 $dropdown-search-input-height: 30px;
 $dropdown-search-max-height: 600px;
